<resources>
    <string name="app_name">Vetra-FitnessApp-TFG</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dark_logo_app">Dark logo app</string>
    <string name="welcome_back">  Welcome back!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="email_icon">email icon</string>
    <string name="lock_icon">lock icon</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="icono_de_google">Icono de google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="welcome">Welcome!</string>
    <string name="create_your_account">Create your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="user_icon">user icon</string>
    <string name="back_icon">back icon</string>
    <string name="recover_password">Recover password</string>
    <string name="send_email">Send Mail</string>
    <string name="please_check_your_email_for_password_reset_instructions">Please check your email for password reset instructions.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_details">Account Details</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="workouts">Workouts</string>
    <string name="chatbot">Chatbot</string>
    <string name="nutrition">Nutrition</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal information</string>
    <string name="personal_information_icon">Personal information icon</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age_icon">Age icon</string>
    <string name="age">Age</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="check_icon">Check icon</string>
    <string name="body_metrics">Body Metrics</string>
    <string name="height_icon">Height icon</string>
    <string name="height">Height</string>
    <string name="weight_icon">Weight icon</string>
    <string name="weight">Weight</string>
    <string name="cm">CM</string>
    <string name="kg">KG</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="calories_icon">Calories icon</string>
    <string name="number_of_kcal">Number of Kcal</string>
    <string name="kcal">KCAL</string>
    <string name="logo_vetra_white">Logo vetra white</string>
    <string name="control_your_space">Control your space</string>
    <string name="hello_username">Hello, username</string>
    <string name="change_picture">Change picture</string>
    <string name="your_name">Your name</string>
    <string name="_0">0</string>
    <string name="save_changes">Save Changes</string>
    <string name="log_out">Log out</string>
    <string name="log_out_message">Are you sure you want to log out? You will need to sign in again to contiune.</string>
    <string name="my_nutrition">My nutrition</string>
    <string name="my_workouts">My workouts</string>
    <string name="my_chatbot">Chatbot</string>
    <string name="add_new_routine">Add New Routine</string>
    <string name="take_photo">Take photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="insert_external_link">Insert external link</string>
    <string name="generate_image_with_ai">Generate image with AI</string>
    <string name="delete_profile_photo">Delete profile photo</string>
    <string name="external_link">External link</string>
    <string name="insert_link">Insert link</string>
    <string name="save">Save</string>
    <string name="link_icon">link icon</string>
    <string name="icon_prompt_ai">icon prompt ai</string>
    <string name="insert_prompt">Insert prompt</string>
    <string name="generate_with_ai">Generate with AI</string>
    <string name="default_web_client_id">1028343963760-e1rshaa0rgf54ls5jujrue5ej7nju0uk.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="routine_name">Routine Name</string>
    <string name="new_routine">New Routine</string>
    <string name="discard">Discard</string>
    <string name="add_exercise">Add exercise</string>
    <string name="new_exercise">New exercise</string>
    <string name="all_the_equipment">All the equipment</string>
    <string name="all_the_muscles">All the muscles</string>
    <string name="popular_exercises">Popular exercises</string>
    <string name="save_rotine_to_make_changes_later_you_ll_need_to_create_a_new_one">Save rotine? To make changes later, you´ll need to create a new one.</string>
    <string name="save_rotine">Save Rotine</string>
    <string name="are_you_sure_you_want_to_discard_this_routine_all_progress_will_be_lost">Are you sure you want to discard this routine? All progress will be lost.</string>
    <string name="discard_routine">Discard Routine</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="equipment">Equipment</string>
    <string name="icono_de_b_squeda">Icono de búsqueda</string>
    <string name="once_deleted_this_exercise_cannot_be_recovered">Once deleted, this exercise cannot be recovered.</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="icono_de_tres_puntos_horizontales_que_representa_un_men">Icono de tres puntos horizontales que representa un menú</string>
    <string name="start_routine">Start Routine</string>
    <string name="finish">Finish</string>
    <string name="delete_routine">Delete routine</string>
    <string name="once_deleted_this_routine_cannot_be_recovered">Once deleted, this routine cannot be recovered.</string>
    <string name="discard_execution_routine">Discard Execution Routine</string>
    <string name="this_will_erase_all_your_progress_continue">This will erase all your progress. Continue?</string>
    <string name="finish_routine">Finish Routine</string>
    <string name="finish_routine_restarting_later_means_starting_from_the_beginning">Finish routine? Restarting later means starting from the beginning.</string>
    <string name="instructions">Instructions:</string>
    <string name="history">History:</string>
    <string name="ideal_weight">⚖️ Ideal weight</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="one_selected_this_chat_cannot_be_recovered">One selected, this chat cannot be recovered.</string>
    <string name="you_can_make_up_to_100_requests_per_month_stay_mindful_and_make_each_one_count">You cannot make more than 100 requests per month. Stay mindful and make each one count!</string>
    <string name="icono_de_uso_limite">Icono de uso limite</string>
    <string name="usage_limit">Usage Limit</string>
    <string name="no_exercises_found">No exercises found.</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_delete_your_account_all_your_data_will_be_permanently_removed">Are you sure you want to delete your account? All your data will be permanently removed.</string>
    <string name="exit_process">Exit Process</string>
    <string name="exiting_this_process_will_require_you_to_re_enter_all_your_account_information_if_you_decide_to_create_an_account_later">Exiting this process will require you to re-enter all your account information if you decide to create an account later.</string>
    <string name="delete_process">Delete Process</string>
    <string name="continueProcess">Continue</string>
    <string name="a_verification_link_has_been_sent_to_your_email_please_check_your_inbox_and_spam_folder">A verification link has been sent to your email.Please check your inbox (and spam folder).</string>
    <string name="icon_mail_sent">Icon mail sent</string>
    <string name="information_new_routine">Hey there! 👋 You\'ll be able to edit the weight (kilos) and repetitions for each exercise when you\'re actively performing the routine. Right now, you can only add or remove sets. Just a heads-up: there\'s a limit of 20 exercises per routine and 15 sets per exercise! 💪</string>
    <string name="remove_set">- Remove set</string>
    <string name="add_set">+ Add set</string>
    <string name="time_to_log_your_workout_as_you_complete_each_exercise_be_sure_to_edit_the_weight_kg_and_reps_to_track_your_progress_accurately_don_t_leave_any_set_unfinished_only_completed_sets_will_be_saved_to_your_history">💪 Time to log your workout! As you complete each exercise, be sure to edit the weight (kg) and reps to track your progress accurately. 🔄 Don’t leave any set unfinished—only completed sets will be saved to your history! ✅🔥</string>
    <string name="icon_drop_down">Icon drop down</string>
    <string name="search_exercise">Search exercise</string>
    <string name="exercises_in_the_last_week">Exercises in the Last Week</string>
</resources>