<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/baseline_fitness_center_24"
        android:title="@string/workouts" />

    <item
        android:id="@+id/navigation_chatgpt"
        android:icon="@drawable/chatgpt"
        android:title="@string/chatbot" />

    <item
        android:id="@+id/navigation_nutrition"
        android:icon="@drawable/baseline_food_bank_24"
        android:title="@string/nutrition" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

</menu>