<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vetra_fitnessapp_tfg.view.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_workouts"
        android:name="com.example.vetra_fitnessapp_tfg.view.fragments.WorkoutFragment"
        android:label="@string/workouts"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_chatgpt"
        android:name="com.example.vetra_fitnessapp_tfg.view.fragments.ChatbotFragment"
        android:label="@string/chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.vetra_fitnessapp_tfg.view.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>