<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_dialog"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover_password"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/goldman"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white"
        android:layout_marginBottom="24dp" />

    <!-- Email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/circleContainerEmail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_background"
            android:elevation="1dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/email_icon"
                android:src="@drawable/baseline_email_24" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/rectangleContainerEmail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="-30dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_rectangle_background"
            android:elevation="0dp"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="254dp"
                android:layout_height="48dp"
                android:layout_marginStart="50dp"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:fontFamily="@font/goldman"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:maxLength="50"
                android:textColor="@android:color/black"
                android:textColorHint="@color/dark_gray"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="14sp"
                tools:ignore="TextFields" />
        </FrameLayout>

    </LinearLayout>

    <!-- Send Email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSendRecovery"
            android:layout_width="142dp"
            android:layout_height="58dp"
            android:fontFamily="@font/goldman"
            android:includeFontPadding="false"
            android:text="@string/send_email"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="25dp"
            app:iconGravity="textStart"
            app:iconPadding="10dp" />

    </LinearLayout>

    <!-- Nota -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/goldman"
        android:text="@string/please_check_your_email_for_password_reset_instructions"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="12sp" />
</LinearLayout>
